# slackFiles

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
slackFiles/: app.py  config.py  downloader.py  logger.py  slack_api.py  tracker.py
tests/: test_app_integration.py  test_downloader.py  test_slack_api.py  test_tracker.py
